# muse-for-anything

./: .dockerignore  .flaskenv  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  start-docker.sh  tasks.py
.github/workflows/: container.yml
docs/: api-doc.rst  cli.rst  conf.py  deployment.rst  index.rst  requirements.txt
migrations/: env.py
migrations/versions/: a18bebd2bb1a_initial_migration.py
muse-for-anything-ui/: .editorconfig  .eslintrc.json  .gitignore  README.md  index.ejs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
muse-for-anything-ui/aurelia_project/: aurelia.json
muse-for-anything-ui/aurelia_project/generators/: attribute.json  attribute.ts  (+14 more)
muse-for-anything-ui/config/: environment.json  environment.production.json
muse-for-anything-ui/src/: app.css  app.html  app.ts  main.ts
muse_for_anything/: __init__.py  babel.py  celery.py  celery_worker.py  licenses.py  oso_helpers.py  password_helpers.py  root_routes.py
muse_for_anything/api/: __init__.py  base_models.py  jwt.py  pagination_util.py  util.py
muse_for_anything/db/: cli.py  pagination.py
muse_for_anything/json_migrations/: __init__.py  constants.py  data_migration.py  jsonschema_matcher.py  jsonschema_validator.py  primitive_to_sequence.py  simple_nested_to_primitive.py  to_array.py  to_boolean.py  to_enum.py  to_number.py  to_object.py  to_resource_ref.py  to_string.py  to_tuple.py  util.py
muse_for_anything/policies/: authorizations.polar  identity_rules.polar  user_management_authorizations.polar
muse_for_anything/static/: .gitignore
muse_for_anything/tasks/: __init__.py  migration.py  tasks.py
muse_for_anything/templates/: example.xml  first-run.html  index.html  licenses.html
muse_for_anything/util/: gc_settings.py  import_helpers.py
tests/: conftest.py  schemas_for_db_test.py  test_data_migration_array.py  test_data_migration_boolean.py  test_data_migration_enum.py  test_data_migration_integer.py  test_data_migration_nested.py  test_data_migration_number.py  test_data_migration_object.py  test_data_migration_string.py  test_data_migration_tuple.py  test_extract_type.py  test_resolve_reference.py
typings/flask_oso/: __init__.pyi  context.pyi  decorators.pyi  flask_oso.pyi
typings/flask_smorest/: __init__.pyi  arguments.pyi  blueprint.pyi  etag.pyi  pagination.pyi  response.pyi
typings/flask_sqlalchemy/: __init__.pyi
typings/sqlalchemy/: __init__.pyi  events.pyi  exc.pyi  inspection.pyi  interfaces.pyi  log.pyi  processors.pyi
typings/webargs/: compat.pyi  core.pyi  dict2schema.pyi  fields.pyi  flaskparser.pyi  multidictproxy.pyi
(+377 files in other folders)
