[tool.poetry]
name = "muse_for_anything"
version = "0.1.0"
description = "A tool for managing Ontologies with Data."
authors = ["Fabian Bühler"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = { extras = ["dotenv"], version = "^3.0.0" }
invoke = "^2.2.0"
Flask-JWT-Extended = "^4.6.0"
Flask-Cors = "^4.0.0"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.23"
Flask-Login = "^0.6.3"
Flask-Migrate = "^4.0.5"
flask-babel = "^4.0.0"
flask-smorest = "^0.44.0"
Flask-Static-Digest = "^0.4.1"
oso = "^0.27.3"
tomli = "^2.0.0"
celery = "^5.4.0"
redis = "^5.0.8"
marshmallow-jsonschema = "^0.13.0"
jsonschema = "4.23.0"
bcrypt = "^4.0.0"
werkzeug = "3.0.1"
psycopg2 = { version = "^2.9.9", optional = true }
PyMySQL = { version = "^1.1.1", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.3.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^24.4.26"
Sphinx = "^7.4.7"
sphinxcontrib-redoc = "^1.6.0"
sphinx-click = "^6.0.0"
myst-parser = "^3.0.1"
sphinx-rtd-theme = "^2.0.0"
pip-licenses = "^4.5.1"
watchdog = "^4.0.1"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
PyMySQL = ["PyMySQL"]

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py37"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.sphinx]
copyright-year = 2022
theme = "sphinx_rtd_theme"
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = true
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]
gunicorn = ["https://docs.gunicorn.org/en/latest/"]

[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
heading_anchors = 2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    # "fieldlist",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    # "strikethrough",
    "tasklist",
]
# substitutions = {"key": "substitution value"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
